# msix-manager

./: CMakeLists.txt  README.md  binding.cc  index.js  package.json  test.js  unsupported.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: windows-sdk.h
test/fixtures/: Makefile  basic.msix
test/fixtures/basic/: AppxManifest.xml
